--- a/MyJ_Notebook.ipynb
+++ b/MyJ_Notebook.ipynb
@@ -89,7 +89,7 @@
     "\n",
     "`if a == 0:` in our code (line 5) is one of the most important condition\n",
     "\n",
-    "If you want more features about Jupyter Notebook, you can go to <a href=\"https://jupyter.org/\"> Jupyter home </a>\n",
+    "If you want more features about Jupyter-Notebook, you can go to <a href=\"https://jupyter.org/\"> Jupyter home </a>\n",
     "\n"
    ]
   }
