--- a/MyJ_Notebook.ipynb
+++ b/MyJ_Notebook.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Moein Zeidanlou**"
+    "**Created by mrpintime**"
    ]
   },
   {
