--- a/MyJ_Notebook.ipynb
+++ b/MyJ_Notebook.ipynb
@@ -87,7 +87,8 @@
     "    3. change algorithm to code\n",
     "    4. test your code\n",
     "\n",
-    "``` python if a == 0:``` in our code (line 5) is one of the most important condition\n",
+    "``` python 
+    if a == 0:``` in our code (line 5) is one of the most important condition\n",
     "\n",
     "If you want more features about Jupyter-Notebook, you can go to <a href=\"https://jupyter.org/\"> Jupyter home </a>\n",
     "\n"
