--- a/MyJ_Notebook.ipynb
+++ b/MyJ_Notebook.ipynb
@@ -87,12 +87,18 @@
     "    3. change algorithm to code\n",
     "    4. test your code\n",
     "\n",
-    "``` python \n", 
-    "if a == 0: ``` in our code (line 5) is one of the most important condition\n",
+    "```if a == 0: ``` in our code (line 5) is one of the most important condition\n",
     "\n",
     "If you want more features about Jupyter-Notebook, you can go to <a href=\"https://jupyter.org/\"> Jupyter home </a>\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
